--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -303,6 +303,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nawr gallwch chi rannu llun proffil ac enw gyda ffrindiau ar Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Mae proffiliau Signal yma</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Estyn neges...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Methiant cyfathrebu Signal parhaol!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Nid yw Signal yn gallu cofrestru gyda Google Play Services. Mae negeseuon a galwadau Signal wedi\'u hanalluogi, ceisiwch ailgofrestru yn Gosodiadau &gt; Uwch.</string>
@@ -386,6 +387,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dileu negeseuon...</string>
   <string name="MediaOverviewActivity_Documents">Dogfennau</string>
   <string name="MediaOverviewActivity_Select_all">Dewis popeth</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Casglu atodiadau...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Ar ganol galwad Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Sicrhau galwad Signal</string>
@@ -455,6 +457,7 @@ Send neges heb ei ddiogelu?</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Nid yw\'r fersiwn o Google Play Services rydych chi wedi\'i osod yn gweithredu\'n gywir. Ail-osodwch Google Play Services a cheisiwch eto.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Estyn neges...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Graddio\'r ap</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Os ydych chi\'n mwynhau defnyddio\'r app hwn, cymerwch amser i\'n helpu ni drwy ei raddio.</string>
@@ -467,6 +470,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ni fyddwch bellach yn derbyn negeseuon a galwadau o\'r cyswllt hwn.</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group">Rhwystro a gadael y grŵp hwn?</string>
   <string name="RecipientPreferenceActivity_block_group">Rhwystro\\'r grŵp hwn?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Fyddwch chi ddim yn derbyn negeseuon na diweddariadau gan y grŵp hwn.</string>
   <string name="RecipientPreferenceActivity_block">Rhwystro</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Dadrwystro\'r cyswllt hwn?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Byddwch unwaith eto yn gallu derbyn negeseuon a galwadau o\'r cyswllt hwn.</string>
@@ -512,6 +516,12 @@ Send neges heb ei ddiogelu?</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Mae Signal angen mynediad i\'ch cysylltiadau a\'ch cyfryngau er mwyn cysylltu â ffrindiau, cyfnewid negeseuon, a gwneud galwadau diogel</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Methu cysylltu â\'r gwasanaeth. Gwiriwch y cysylltiad rhwydwaith a cheisio eto.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">I wirio eich rhif ffôn yn hawdd, gall Signal ganfod eich cod dilysu yn awtomatig os ydych yn caniatáu i Signal weld negeseuon SMS.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Rydych chi nawr %d cam cyn cyflwyno cofnod dadfygio.</item>
+    <item quantity="two">Rydych chi nawr %d gam cyn cyflwyno cofnod dadfygio.</item>
+    <item quantity="many">Rydych chi nawr %dcam cyn cyflwyno cofnod dadfygio.</item>
+    <item quantity="other">Rydych chi nawr %dcam cyn cyflwyno cofnod dadfygio.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Methu cadw newidiadau i ddelweddau</string>
   <!--Search-->
@@ -520,6 +530,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="SearchFragment_header_contacts">Cysylltiadau</string>
   <string name="SearchFragment_header_messages">Negeseuon</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">Anfon neges...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Ychwanegu at Cysylltiadau</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Gwahodd i Signal</string>
@@ -643,6 +654,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="QuickResponseService_problem_sending_message">Anhawster anfon neges!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Wedi\'i gadw i %s</string>
+  <string name="SaveAttachmentTask_saved">Wedi cadw</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Chwilio</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Chwilio am sgyrsiau, cysylltiadau a negeseuon</string>
@@ -1070,8 +1082,11 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences_events__contact_joined_signal">Cysylltiad wedi ymuno â Signal</string>
   <string name="preferences_notifications__priority">Blaenoriaeth</string>
   <string name="preferences_communication__category_sealed_sender">Anfonwr dan Sêl</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Dangos dangosyddion</string>
   <string name="preferences_communication__sealed_sender_display_indicators_description">Dangos eicon statws pan fyddwch yn dewis \"Manylion neges\" ar negeseuon sydd wedi eu anfon gan ddefnyddio anfonwr dan sêl.</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone">Caniatáu gan bawb</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Galluogwch anfon dan sêl ar gyfer negeseuon i mewn gan y sawl sydd ddim yn gysylltiad a phobl nad ydych wedi rhannu eich proffil.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Dysgu rhagor</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
