--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -69,10 +69,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Appel entrant</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Appareil photo indisponible.</string>
+  <string name="CameraActivity_image_save_failure">Échec de l’enregistrement de l’image.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Supprimer</string>
   <string name="ClearProfileActivity_remove_profile_photo">Supprimer la photo de profil ?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Aucun navigateur Internet trouvé.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Votre numéro de sécurité avec %1$s a changé. Cela pourrait signifier soit que quelqu’un tente d’intercepter votre communication, soit que %2$s a simplement réinstallé Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Vous voudrez peut-être vérifier votre numéro de sécurité avec ce contact.</string>
@@ -133,6 +136,7 @@
   <string name="ConversationActivity_error_leaving_group">Erreur en quittant le groupe</string>
   <string name="ConversationActivity_specify_recipient">Veuillez choisir un contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">Débloquer ce contact ?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Débloquer ce groupe ?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Vous pourrez de nouveau recevoir les messages et appels de ce contact.</string>
   <string name="ConversationActivity_unblock_this_group_description">Les membres actuels pourront vous ajouter au groupe de nouveau.</string>
   <string name="ConversationActivity_unblock">Débloquer</string>
@@ -269,6 +273,7 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Vous pouvez maintenant partager une photo de profil et un nom avec des amis sur Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Les profils de Signal sont arrivés</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Récupération d’un message…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Échec de communication Signal permanent !</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal n’a pas réussi à s’inscrire auprès des services Google Play. Les appels et messages Signal ont été désactivés. Veuillez essayer de vous réinscrire dans Paramètres &gt; Avancé.</string>
@@ -321,6 +326,7 @@
   <string name="InviteActivity_no_app_to_share_to">Vous semblez n’avoir aucune appli vers laquelle partager.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Les amis ne laissent pas leur amis dialoguer sans chiffrement.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Travail en arrière-plan…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Échec d’envoi</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nouveau numéro de sécurité</string>
@@ -414,6 +420,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La version des services Google Play que vous avez installée ne fonctionne pas correctement. Veuillez réinstaller les Services Google Play et ressayer.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Récupération d’un message…</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Notez cette appli</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si vous aimez cette appli, veuillez prendre quelques instants pour nous aider en l’évaluant.</string>
@@ -424,10 +431,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquer ce contact ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Vous ne recevrez plus de messages ni d’appels de ce contact.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Bloquer et quitter ce groupe ?</string>
+  <string name="RecipientPreferenceActivity_block_group">Bloquer ce groupe ?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Vous ne recevrez plus ni messages ni mises à jour de ce groupe</string>
   <string name="RecipientPreferenceActivity_block">Bloquer</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Débloquer ce contact ?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Vous pourrez de nouveau recevoir les messages et appels de ce contact.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Débloquer ce groupe ?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Les membres actuels pourront vous ajouter au groupe de nouveau.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Erreur en quittant le groupe</string>
   <string name="RecipientPreferenceActivity_unblock">Débloquer</string>
@@ -469,6 +479,10 @@ introduit (%s) n’est pas valide.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal a besoin d’accéder à vos contacts et médias pour se connecter avec vos amis, échanger des messages et effectuer des appels sécurisés</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Impossible de se connecter au service. Veuillez vérifier la connexion réseau et ressayer.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Pour vérifier facilement votre numéro de téléphone, Signal peut automatiquement détecter votre code de vérification si vous autorisez Signal à visualiser les textos.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Vous êtes maintenant à %d étapes de l’envoi d\'un journal de débogage.</item>
+    <item quantity="other">Vous êtes maintenant à %d étapes de l’envoi d\'un journal de débogage.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Échec d’enregistrement des modifications apportées aux images</string>
   <!--Search-->
@@ -477,6 +491,7 @@ introduit (%s) n’est pas valide.</string>
   <string name="SearchFragment_header_contacts">Contacts</string>
   <string name="SearchFragment_header_messages">Messages</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">Envoi d’un message…</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Ajouter aux contacts</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Inviter à Signal</string>
@@ -599,6 +614,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="QuickResponseService_problem_sending_message">Erreur lors de l’envoi du message !</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Enregistré dans %s</string>
+  <string name="SaveAttachmentTask_saved">Enregistré</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Recherche</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Chercher des conversations, des contacts ou des messages</string>
@@ -1010,7 +1026,9 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences_events__contact_joined_signal">Un contact s’est joint à Signal</string>
   <string name="preferences_notifications__priority">Priorité</string>
   <string name="preferences_communication__category_sealed_sender">Expéditeur scellé</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Autoriser de n’importe qui</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Activez l’option « expéditeur scellé » pour les messages entrants provenant d’expéditeurs qui ne sont pas dans vos contacts et de personnes avec qui vous n’avez pas partagé votre profil.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">En savoir plus</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1142,6 +1160,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences_chats__create_backup">Créer une sauvegarde</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Saisir la phrase de passe de la sauvegarde</string>
   <string name="RegistrationActivity_restore">Restaurer</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Impossible d’importer des sauvegardes à partir de versions plus récentes de Signal.</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">La phrase de passe de la sauvegarde est erronée</string>
   <string name="RegistrationActivity_checking">Vérification…</string>
   <string name="RegistrationActivity_d_messages_so_far">%d messages pour l’instant…</string>
