--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -124,7 +124,7 @@
   <string name="ConversationActivity_add_attachment">הוסף צרופה</string>
   <string name="ConversationActivity_select_contact_info">בחר מידע של איש קשר</string>
   <string name="ConversationActivity_compose_message">חבר הודעה</string>
-  <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">סליחה, אירעה שגיאה בהגדרת הצרופה שלך.</string>
+  <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">סליחה, אירעה שגיאה בהוספת הצרופה שלך.</string>
   <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">המקבל אינו כתובת תקפה של מסרון או כתובת דוא\"ל!</string>
   <string name="ConversationActivity_message_is_empty_exclamation">ההודעה ריקה!</string>
   <string name="ConversationActivity_group_members">חברי קבוצה</string>
@@ -301,6 +301,7 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">עכשיו אתה יכול לשתף תצלום ושם של פרופיל עם חברים ב-Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">פרופילי Signal כאן</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">מאחזר הודעה...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">כישלון תקשורת קבוע של Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal לא היה יכול להירשם עם שירותי Google Play. הודעות ושיחות של Signal הושבתו, אנא נסה להירשם מחדש בהגדרות &lt; מתקדם.</string>
@@ -357,6 +358,7 @@
   <string name="InviteActivity_no_app_to_share_to">נראה שאין לך יישומים כלשהם לשתף בהם.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">חברים לא נותנים לחברים להתכתב באופן לא מוצפן.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">עובד ברקע...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">נכשל לשלוח</string>
   <string name="MessageDetailsRecipient_new_safety_number">מספר ביטחון חדש</string>
@@ -453,6 +455,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">הגרסה של שירותי Google Play המותקנת מתפקדת כראוי. אנא התקן מחדש את שירותי Google Play ונסה שוב.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">מאחזר הודעה...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">דרג יישום זה</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">אם נהנית להשתמש באפליקציה הזאת, אולי אפשר לבקש ממך להקדיש רגע לעזור לנו ולדרג אותה?</string>
@@ -463,6 +466,8 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">לחסום את איש הקשר הזה?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">לא תקבל יותר הודעות ושיחות מאיש קשר זה.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">לחסום ולעזוב קבוצה זו?</string>
+  <string name="RecipientPreferenceActivity_block_group">לחסום קבוצה זו?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">לא תקבל יותר הודעות או עדכונים מקבוצה זו.</string>
   <string name="RecipientPreferenceActivity_block">חסום</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">לבטל את החסימה של איש הקשר הזה?</string>
@@ -509,6 +514,12 @@
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal צריך גישה אל אנשי הקשר והמדיה שלך על מנת לחבור אל חברים, להחליף הודעות ולקיים שיחות מאובטחות</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">לא היה ניתן להתחבר אל השירות. אנא בדוק את חיבור האינטרנט ונסה שוב.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">כדי לוודא בקלות את מספר הטלפון שלך, Signal יכול לזהות באופן אוטומטי את קוד הוידוא שלך אם תתיר אל Signal לראות הודעות מסרונים.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">אתה כעת במרחק צעד %d מהגשת יומן ניפוי תקלים.</item>
+    <item quantity="two">אתה כעת במרחק %d צעדים מהגשת יומן ניפוי תקלים.</item>
+    <item quantity="many">אתה כעת במרחק %d צעדים מהגשת יומן ניפוי תקלים.</item>
+    <item quantity="other">אתה כעת במרחק %d צעדים מהגשת יומן ניפוי תקלים.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">נכשל בשמירת שינויי תמונה</string>
   <!--Search-->
@@ -517,6 +528,7 @@
   <string name="SearchFragment_header_contacts">אנשי קשר</string>
   <string name="SearchFragment_header_messages">הודעות</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">שולח הודעה...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">הוסף לאנשי קשר</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">הזמן אל Signal</string>
@@ -640,6 +652,7 @@
   <string name="QuickResponseService_problem_sending_message">בעיה בשליחת הודעה!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">נשמר ב־%s</string>
+  <string name="SaveAttachmentTask_saved">נשמר</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">חפש</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">חפש שיחות, אנשי קשר והודעות</string>
@@ -1067,7 +1080,11 @@
   <string name="preferences_events__contact_joined_signal">איש קשר הצטרף אל Signal</string>
   <string name="preferences_notifications__priority">עדיפות</string>
   <string name="preferences_communication__category_sealed_sender">שולח אטום</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">הצג מחוונים</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">הראה צלמית מעמד כאשר אתה בוחר \"פרטי הודעה\" בהודעות שנמסרו ע\"י שימוש בשולח אטום.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">התר מכל אחד</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">אפשר שולח אטום עבור הודעות נכנסות מאת אי־אנשי קשר ומאת אנשים איתם לא שיתפת את הפרופיל שלך.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">למד עוד</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1201,6 +1218,7 @@
   <string name="preferences_chats__create_backup">צור גיבוי</string>
   <string name="RegistrationActivity_enter_backup_passphrase">הכנס משפט־סיסמה של גיבוי</string>
   <string name="RegistrationActivity_restore">שחזור</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">לא ניתן לייבא גיבויים מגרסאות חדשות יותר של Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">משפט־סיסמה שגוי של גיבוי</string>
   <string name="RegistrationActivity_checking">בודק...</string>
   <string name="RegistrationActivity_d_messages_so_far">%d הודעות עד כה...</string>
