--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -69,10 +69,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">A receber chamada</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Câmara não disponível.</string>
+  <string name="CameraActivity_image_save_failure">Não foi possível guardar a imagem.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Remover</string>
   <string name="ClearProfileActivity_remove_profile_photo">Remover a foto do perfil?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Não foi encontrado nenhum navegador de Internet.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">O seu número de segurança com %1$s foi alterado. Isto pode significar que alguém está a tentar interceptar esta comunicação ou simplesmente que %2$s reinstalou o Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Pode ser desejável verificar o seu número de segurança com este contacto.</string>
@@ -133,6 +136,7 @@
   <string name="ConversationActivity_error_leaving_group">Erro ao sair do grupo</string>
   <string name="ConversationActivity_specify_recipient">Por favor escolha um contacto</string>
   <string name="ConversationActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Desbloquear este grupo?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Irá voltar a receber mensagens e chamadas deste contacto.</string>
   <string name="ConversationActivity_unblock_this_group_description">Membros actuais poderão voltar a adicionar o seu contacto ao grupo.</string>
   <string name="ConversationActivity_unblock">Desbloquear</string>
@@ -269,6 +273,7 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Agora pode partilhar a sua foto de perfil e nome com amigos no Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Chegaram os perfis Signal</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">A obter uma mensagem...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Falha de comunicação do Signal permanente!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">O Signal não se conseguiu registar com os Serviços Google Play. As mensagens e chamadas do Signal estão desativadas, por favor tente registar-se novamente em Definições &gt; Avançadas.</string>
@@ -321,6 +326,7 @@
   <string name="InviteActivity_no_app_to_share_to">Parece que não tem aplicações para as quais partilhar.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Amigos não deixam amigos falar sem segurança.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">A processar em segundo plano...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">O envio falhou</string>
   <string name="MessageDetailsRecipient_new_safety_number">Novo número de segurança</string>
@@ -413,6 +419,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A sua versão de Google Play Services não está a funcionar correctamente. Por favor reinstale Google Play Services e tente novamente.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">A obter uma mensagem...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Avalie esta app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se gostou desta aplicação, ajude-nos avaliando-a na Play Store.</string>
@@ -423,10 +430,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Não irá receber mensagens ou chamadas adicionais deste contacto.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Bloquear e deixar este grupo?</string>
+  <string name="RecipientPreferenceActivity_block_group">Bloquear este grupo?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Não voltará a receber mensagens ou actualizações deste grupo.</string>
   <string name="RecipientPreferenceActivity_block">Bloquear</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Irá voltar a receber mensagens e chamadas deste contacto.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Desbloquear este grupo?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Membros actuais poderão voltar a adicionar o seu contacto ao grupo.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Erro ao sair do grupo</string>
   <string name="RecipientPreferenceActivity_unblock">Desbloquear</string>
@@ -468,6 +478,10 @@ especificou (%s) não é válido.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal precisa de acesso aos contactos e média para poder ligar com os seus amigos, trocar mensagens e efectuar chamadas seguras.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Não foi possível conectar ao serviço. Por favor verifique a sua ligação à rede e tente novamente.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Para verificar facilmente o seu número de telefone, o Signal pode detectar automaticamente o seu código de verificação, se o permitir ler mensagens SMS.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Está a %d passo de submeter um registo de depuração.</item>
+    <item quantity="other">Está a %d passos de submeter um registo de depuração.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Falha ao guardar alteração de imagem.</string>
   <!--Search-->
@@ -476,6 +490,7 @@ especificou (%s) não é válido.</string>
   <string name="SearchFragment_header_contacts">Contactos</string>
   <string name="SearchFragment_header_messages">Mensagens</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">A enviar uma mensagem...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Adicionar aos Contactos</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Convidar para o Signal</string>
@@ -601,6 +616,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="QuickResponseService_problem_sending_message">Problema no envio da mensagem!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Guardado para %s</string>
+  <string name="SaveAttachmentTask_saved">Guardado</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Procurar</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Procurar por conversas, contactos e mensagens</string>
@@ -1011,6 +1027,12 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences_chats__message_text_size">Tamanho de letra da mensagem</string>
   <string name="preferences_events__contact_joined_signal">Um contacto juntou-se ao Signal</string>
   <string name="preferences_notifications__priority">Prioridade</string>
+  <string name="preferences_communication__category_sealed_sender">Emissor Selado</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Indicadores de visualização</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Mostrar um ícone de estado quando seleciona \"Detalhes da mensagem\" em mensagens que foram entregues utilizando o emissor selado.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Permitir de qualquer um</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Ativar o emissor selado para mensagens recebidas de não-contactos e pessoas com as quais não partilhou o seu perfil.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Saber mais</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1142,6 +1164,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences_chats__create_backup">Criar cópia de segurança</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Introduza a frase-chave da cópia de segurança</string>
   <string name="RegistrationActivity_restore">Restaurar</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Não é possível importar cópias de segurança de novas versões do Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Frase-chave de cópia de segurança incorrecta</string>
   <string name="RegistrationActivity_checking">A verificar...</string>
   <string name="RegistrationActivity_d_messages_so_far">%d mensagens até à data...</string>
