--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -72,10 +72,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Apel de intrare</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Cameră indisponibilă.</string>
+  <string name="CameraActivity_image_save_failure">Eroare la salvarea imaginii.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eliminați</string>
   <string name="ClearProfileActivity_remove_profile_photo">Elimin poza de profil?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Nu s-a găsit nici un web browser.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Numărul de siguranță pentru %1$s s-a schimbat.  Asta poate însemna că cineva încearcă să intercepteze comunicația sau că %2$s a reinstalat Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Probabil că dorești să verifici numărul de siguranță pentru acest contact.</string>
@@ -136,6 +139,7 @@
   <string name="ConversationActivity_error_leaving_group">Eroare la parăsirea grupului</string>
   <string name="ConversationActivity_specify_recipient">Vă rog alegeți un contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">Deblochez acest contact?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Deblochez acest grup?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">O să poți primi din nou mesaje și apeluri de la acest contact.</string>
   <string name="ConversationActivity_unblock_this_group_description">Membrii existenți vor putea să te adauge la grup din nou.</string>
   <string name="ConversationActivity_unblock">Deblochează</string>
@@ -283,6 +287,7 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Acum poți distribui numele și o poză de profil la prietenii de pe Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profilurile Signal sunt aici</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Se obține un mesaj...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Eroare permanentă de comunicare cu Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal nu s-a putut înregistra la Google Play Services. Mesajele și apelurile Signal au fost dezactivate, te rog încearcă să te înregistrezi din nou din meniul Setări &gt; Avansat.</string>
@@ -337,6 +342,7 @@
   <string name="InviteActivity_no_app_to_share_to">Se pare că nu ai aplicații cu care să poți distribui.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Prietenii nu-și lasă prietenii să converseze necriptat.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Se procesează în fundal...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Expediere eşuată</string>
   <string name="MessageDetailsRecipient_new_safety_number">Număr nou de siguranță</string>
@@ -432,6 +438,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Această versiune de Google Play Services pe care o ai instalată nu funcționează corect. Te rog reinstalează Google Play Services și încearcă din nou.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Se obține un mesaj...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Evaluați aplicaţia</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Dacă vă place aplicaţia, vă rog ajutați-ne cu o evaluare.</string>
@@ -442,10 +449,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blochez acest contact?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Nu o să mai primești mesaje și apeluri de la acest contact.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Blocați și părăsiți acest grup?</string>
+  <string name="RecipientPreferenceActivity_block_group">Blochează acest grup</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Nu vei mai putea primi mesaje sau actualizări de la acest grup.</string>
   <string name="RecipientPreferenceActivity_block">Blochează</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Deblochez acest contact?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">O să poți primi din nou mesaje și apeluri de la acest contact.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Deblochez acest grup?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Membrii existenți vor putea să te adauge la grup din nou.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Eroare la parăsirea grupului</string>
   <string name="RecipientPreferenceActivity_unblock">Deblochează</string>
@@ -487,6 +497,11 @@ furnizat (%s) este invalid.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal are nevoie de acces la contactele tale și media pentru a putea facilita comunicarea cu prietenii tăi, schimba mesaje și pentru a efectua apeluri securizate</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Nu s-a putut realiza conexiunea la serviciu. Te rog verifică conexiunea la rețea și încearcă din nou.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Pentru a putea verifica cât mai ușor numărul tău de telefon, Signal poate detecta automat codul de verificare daca îi permiți aplicației Signal să citească mesajele SMS.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Ești acum la %d pas de a trimite un jurnal de depanare.</item>
+    <item quantity="few">Ești acum la %d pași de a trimite un jurnal de depanare.</item>
+    <item quantity="other">Ești acum la %d pași de a trimite un jurnal de depanare.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Salvarea modificărilor din imagine a eșuat</string>
   <!--Search-->
@@ -495,6 +510,7 @@ furnizat (%s) este invalid.</string>
   <string name="SearchFragment_header_contacts">Contacte</string>
   <string name="SearchFragment_header_messages">Mesaje</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">Se trimite un mesaj...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Adăugați la contacte</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Invitați la Signal</string>
@@ -618,6 +634,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="QuickResponseService_problem_sending_message">Problemă la trimiterea mesajului!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Salvat în %s</string>
+  <string name="SaveAttachmentTask_saved">Salvat</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Căutați</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Căutați conversații, contacte și mesaje</string>
@@ -1038,7 +1055,11 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences_events__contact_joined_signal">Un contact s-a alăturat pe Signal</string>
   <string name="preferences_notifications__priority">Prioritate</string>
   <string name="preferences_communication__category_sealed_sender">Expeditor ascuns</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Afișează indicatoare</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Afișează o icoană de status când selectezi \"Detalii mesaj\" din mesajele care au fost trimise folosind funcția expeditor ascuns.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Permite oricui</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Activează funcția de expeditor ascuns pentru mesajele primite de la non-contacte și persoane cu care nu ai partajat profilul tău.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Află mai multe</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1171,6 +1192,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences_chats__create_backup">Creează backup</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Introduceți parola pentru backup</string>
   <string name="RegistrationActivity_restore">Restaurează</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Nu se pot importa backup-uri din versiuni mai noi de Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Parola pentru backup este incorectă</string>
   <string name="RegistrationActivity_checking">În curs de verificare</string>
   <string name="RegistrationActivity_d_messages_so_far">%d mesaje până acum...</string>
