Update typing indicator intro strings.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -322,8 +322,8 @@
     <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Would you like to enable them now?</string>
     <string name="ExperienceUpgradeActivity_typing_ui_title">Typing indicators are here</string>
     <string name="ExperienceUpgradeActivity_enable_typing_indicators">Enable typing indicators</string>
-    <string name="ExperienceUpgradeActivity_yes_turn_on_typing_indicators">Yes, turn on typing indicators.</string>
-    <string name="ExperienceUpgradeActivity_no_thanks">No thanks.</string>
+    <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Turn on typing indicators</string>
+    <string name="ExperienceUpgradeActivity_no_thanks">No thanks</string>
 
     <!-- GcmBroadcastReceiver -->
     <string name="GcmBroadcastReceiver_retrieving_a_message">Retrieving a message...</string>
